fixed remarks and port